--- a/src/Accordion/Accordion.module.css
+++ b/src/Accordion/Accordion.module.css
@@ -40,10 +40,11 @@
 
 .Accordion__summary::before,
 .Accordion__summary::after {
-  font-family: var(--brand-fontStack-monospace);
+  font-family: var(--brand-fontStack-sansSerif);
+  font-weight: 500;
   cursor: pointer;
   display: block;
-  font-size: var(--brand-text-size-600);
+  font-size: 32px;
   line-height: 24px;
   text-align: center;
   height: 24px;
@@ -61,13 +62,12 @@
   transition: transform 0.3s ease, opacity 0.2s ease;
   grid-column: 1 / 2;
   grid-row: 1;
-  place-self: start center;
+  place-self: center center;
 }
 .Accordion__summary::before {
   font-weight: var(--base-text-weight-medium);
-  content: '-';
+  content: '–';
   opacity: 0;
-  margin-top: 3px;
 }
 .Accordion__summary::after {
   content: '+';
