--- a/src/Accordion/Accordion.module.css
+++ b/src/Accordion/Accordion.module.css
@@ -73,6 +73,14 @@
   content: '+';
 }
 
+.Accordion__summary-heading {
+  /*Visual appearance as a h6*/
+  font-weight: var(--brand-heading-weight-400);
+  font-size: var(--brand-text-size-400);
+  line-height: var(--brand-text-lineHeight-400);
+  letter-spacing: var(--brand-heading-letterSpacing-400);
+}
+
 details[open] > .Accordion__summary::before {
   opacity: 1;
   transform: rotateZ(180deg);
