--- a/src/FAQ/FAQ.module.css
+++ b/src/FAQ/FAQ.module.css
@@ -4,10 +4,22 @@
 }
 
 .FAQ__heading {
+  /*Visual appearance as a h3*/
+  font-weight: var(--brand-heading-weight-700);
+  font-size: var(--brand-text-size-700);
+  line-height: var(--brand-heading-lineHeight-700);
+  letter-spacing: var(--brand-heading-letterSpacing-700);
+
   color: var(--brand-FAQ-heading-color);
 }
 
 .FAQ__subheading {
+  /*Visual appearance as a h4*/
+  font-weight: var(--brand-heading-weight-600);
+  font-size: var(--brand-text-size-600);
+  line-height: var(--brand-text-lineHeight-600);
+  letter-spacing: var(--brand-heading-letterSpacing-600);
+
   margin-top: var(--base-size-64);
   margin-bottom: var(--base-size-16);
 }
@@ -21,6 +33,14 @@
   max-width: var(--brand-FAQ-heading-centered-maxWidth);
   margin-left: auto;
   margin-right: auto;
+}
+
+.FAQ__heading--large {
+  /*Visual appearance as a h2*/
+  font-weight: var(--brand-text-weight-800);
+  font-size: var(--brand-text-size-800);
+  line-height: var(--brand-text-lineHeight-800);
+  letter-spacing: var(--brand-text-letterSpacing-800);
 }
 
 /* Large breakpoint and up */
