--- a/integration-tests/astro/index.astro
+++ b/integration-tests/astro/index.astro
@@ -1,13 +1,7 @@
 ---
 // Component Imports
-import Counter from "../components/Counter.tsx";
-const someProps = {
-	count: 0,
-};
+import Test from "../fixtures/KitchenSink.tsx";
 
-
-// Full Astro Component Syntax:
-// https://docs.astro.build/core-concepts/astro-components/
 ---
 
 <html lang="en">
@@ -28,9 +22,7 @@ const someProps = {
 	</head>
 	<body>
 		<main>
-			<Counter {...someProps} client:visible>
-				<h1>Hello, React!</h1>
-			</Counter>
+			<Test />
 		</main>
 	</body>
 </html>
