--- a/src/forms/TextInput/TextInput.module.css
+++ b/src/forms/TextInput/TextInput.module.css
@@ -4,12 +4,11 @@
 .TextInput {
   display: flex;
   color: var(--brand-color-text-default);
-
   background-color: var(--brand-color-canvas-default);
   border: solid var(--brand-borderWidth-thin, 1px) var(--brand-color-border-default);
   line-height: var(--brand-text-lineHeight-200);
   border-radius: var(--brand-borderRadius-medium, 6px);
-  transition: 80ms cubic-bezier(0.33, 1, 0.68, 1); /* FIXME: with timing token */
+  transition: var(--brand-control-animation-duration) var(--brand-control-animation-easing);
   transition-property: color, background-color, box-shadow, border-color;
 }
 
@@ -39,15 +38,15 @@
 .TextInput--medium {
   font-weight: var(--brand-text-weight-200);
   font-size: var(--brand-text-size-200);
-  height: 40px;
-  padding: 12px 10px 10px;
+  height: var(--brand-control-medium-size, 40px);
+  padding: var(--brand-control-medium-padding, 12px 10px 10px);
 }
 
 .TextInput--large {
   font-weight: var(--brand-text-weight-300);
   font-size: var(--brand-text-size-300);
-  height: 48px;
-  padding: 12px;
+  height: var(--brand-control-large-size, 48px);
+  padding: var(--brand-control-large-padding, 12px);
 }
 
 /*
@@ -188,7 +187,7 @@
 
 .TextInput-leading-text-inner--medium,
 .TextInput-trailing-text-inner--medium {
-  height: 18px; /*calc(fullheight / 2*/
+  height: 20px; /*calc(fullheight / 2*/
 }
 .TextInput-leading-text-inner--large,
 .TextInput-trailing-text-inner--large {
