--- a/src/forms/Select/Select.module.css
+++ b/src/forms/Select/Select.module.css
@@ -30,7 +30,7 @@
 .Select:focus-visible {
   border-color: var(--brand-color-focus);
   outline: none;
-  box-shadow: inset 0 0 0 1px var(--brand-color-focus);
+  box-shadow: 0 0 0 2px var(--brand-color-focus);
 }
 
 .Select[disabled] {
