--- a/src/forms/TextInput/TextInput.module.css
+++ b/src/forms/TextInput/TextInput.module.css
@@ -5,11 +5,11 @@
   display: flex;
   color: var(--brand-control-color-fg-default);
   background-color: var(--brand-color-canvas-default);
-  border: solid var(--brand-borderWidth-thin, 1px) var(--brand-control-color-border-default);
-  line-height: var(--brand-text-lineHeight-200);
+  border: none;
   border-radius: var(--brand-control-border-radius);
+  line-height: var(--brand-text-lineHeight-200);
   transition: var(--brand-control-animation-duration) var(--brand-control-animation-easing);
-  transition-property: color, background-color, box-shadow, border-color;
+  transition-property: color, background-color, box-shadow;
 }
 
 .TextInput::placeholder {
@@ -17,19 +17,16 @@
   opacity: 1;
 }
 
-.TextInput:focus-visible {
-  border-color: var(--brand-color-focus);
-  outline: none;
-  box-shadow: inset 0 0 0 1px var(--brand-color-focus);
-}
-
 .TextInput[disabled] {
   -webkit-text-fill-color: var(--brand-control-color-fg-disabled);
   color: var(--brand-control-color-fg-disabled);
   cursor: not-allowed;
   background-color: var(--brand-control-color-canvas-disabled);
-  border-color: var(--brand-control-color-border-disabled);
   opacity: 1;
+}
+
+.TextInput:focus {
+  outline: none;
 }
 
 /*
@@ -57,27 +54,21 @@
 }
 
 /*
- * Validation
- */
-
-.TextInput--success,
-.TextInput--success[disabled] {
-  border-color: var(--brand-color-success-fg);
-}
-
-.TextInput--error,
-.TextInput--error[disabled] {
-  border-color: var(--brand-color-error-fg);
-}
-
-/*
  * TextInput wrapper
  */
+
+.TextInput-wrapper--disabled {
+  border-color: var(--brand-control-color-border-disabled);
+}
 
 .TextInput-wrapper {
   font-family: var(--brand-body-fontFamily);
   display: inline-flex;
   position: relative;
+  border: solid var(--brand-borderWidth-thin, 1px) var(--brand-control-color-border-default);
+  border-radius: var(--brand-control-border-radius);
+  transition: var(--brand-control-animation-duration) var(--brand-control-animation-easing);
+  transition-property: border;
 }
 
 .TextInput-wrapper--fullWidth {
@@ -86,6 +77,26 @@
 
 .TextInput-wrapper--monospace {
   font-family: var(--brand-fontStack-monospace);
+}
+
+.TextInput-wrapper:focus-within {
+  border-color: var(--brand-color-focus);
+  box-shadow: 0 0 0 1px var(--brand-color-focus);
+  outline: none;
+}
+
+/*
+ * Validation
+ */
+
+.TextInput-wrapper--success,
+.TextInput-wrapper--success.TextInput-wrapper--disabled {
+  border-color: var(--brand-color-success-fg);
+}
+
+.TextInput-wrapper--error,
+.TextInput-wrapper--error.TextInput-wrapper--disabled {
+  border-color: var(--brand-color-error-fg);
 }
 
 /*
@@ -148,7 +159,6 @@
   align-items: center;
   color: var(--brand-color-text-muted);
   pointer-events: none;
-  border: solid var(--brand-borderWidth-thin, 1px) var(--brand-control-color-border-default);
   white-space: nowrap;
 }
 
@@ -156,7 +166,6 @@
 .TextInput-trailing-text--disabled {
   color: var(--brand-control-color-fg-disabled);
   background-color: var(--brand-control-color-canvas-disabled);
-  border-color: var(--brand-control-color-border-disabled);
 }
 
 .TextInput-leading-text {
@@ -178,11 +187,11 @@
 }
 
 .TextInput-leading-text-inner {
-  border-right: 1px solid var(--brand-control-color-border-default);
+  border-right: 1px solid var(--brand-color-border-default);
 }
 
 .TextInput-trailing-text-inner {
-  border-left: 1px solid var(--brand-control-color-border-default);
+  border-left: 1px solid var(--brand-color-border-default);
 }
 
 .TextInput-leading-text-inner--medium,
