--- a/src/Button/Button.module.css
+++ b/src/Button/Button.module.css
@@ -5,7 +5,6 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem 1.5rem;
   transition: box-shadow 0.2s;
   text-decoration: none;
   border-radius: 6px;
@@ -49,4 +48,12 @@
 
 .Button--secondary:hover {
   box-shadow: inset 0 0 0 2px var(--brand-color-neutral-emphasisPlus);
+}
+
+.Button--size-medium {
+  padding: var(--base-size-16) var(--base-size-24);
+}
+
+.Button--size-large {
+  padding: var(--base-size-16) var(--base-size-32);
 }
