--- a/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -164,7 +164,7 @@
     animation-duration: 350ms;
     animation-delay: calc(var(--animation-order) * 100ms);
     animation-fill-mode: both;
-    animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+    animation-timing-function: ease-in-out;
   }
 }
 
@@ -324,7 +324,8 @@
   border-radius: var(--brand-borderRadius-medium);
 }
 
-.SubdomainNavBar-search-button svg {
+.SubdomainNavBar-search-button svg,
+.SubdomainNavBar-menu-button svg {
   width: 24px;
   height: 24px;
 }
