add interaction tests + visual regression tests

--- a/src/forms/TextInput/TextInput.module.css
+++ b/src/forms/TextInput/TextInput.module.css
@@ -71,6 +71,10 @@
   transition-property: border;
 }
 
+.TextInput-wrapper--invisible {
+  border-color: transparent;
+}
+
 .TextInput-wrapper--fullWidth {
   display: flex;
 }
