--- a/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -32,7 +32,7 @@
  */
 .SubdomainNavBar-inner-container {
   display: flex;
-  padding: 4px 40px;
+  padding: 4px 28px;
   max-width: 1280px;
   margin: 0 auto;
 }
@@ -211,7 +211,7 @@
   font-weight: var(--base-text-weight-normal);
   font-size: var(--base-size-20);
   line-height: var(--base-size-20);
-  padding: var(--base-size-8) var(--base-size-16) var(--base-size-16) var(--base-size-40);
+  padding: var(--base-size-8) var(--base-size-16) var(--base-size-16) var(--base-size-28);
   text-decoration: none;
 }
 
@@ -528,18 +528,25 @@
   border-color: transparent;
 }
 
-.SubdomainNavBar-search-results {
-  list-style: none;
+.SubdomainNavBar-search-results-container {
+  animation: fade-in-down 500ms;
   padding: var(--base-size-24);
   background-color: var(--base-color-scale-white-0);
   border-radius: var(--brand-borderRadius-large);
   box-shadow: 0px 8px 24px rgba(1, 4, 9, 0.15);
-  overflow-y: scroll;
   max-height: 514px;
   height: 70vh;
   max-width: 570px;
   margin: 0 auto;
-  animation: fade-in-down 500ms;
+  width: 80%;
+}
+
+.SubdomainNavBar-search-results {
+  overflow-y: scroll;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  height: 90%;
 }
 
 .SubdomainNavBar-search-results-heading {
