--- a/src/Testimonial/Testimonial.module.css
+++ b/src/Testimonial/Testimonial.module.css
@@ -34,3 +34,8 @@
   vertical-align: middle;
   border-radius: 50%;
 }
+
+.Testimonial--center .Testimonial-logo-image {
+  margin-left: auto;
+  margin-right: auto;
+}
