--- a/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -233,7 +233,7 @@
   .SubdomainNavBar-link::after {
     content: '';
     position: absolute;
-    bottom: 6px;
+    bottom: 10px;
     left: 0;
     width: 100%;
     height: 2px;
@@ -335,8 +335,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: border 250ms cubic-bezier(0.16, 1, 0.3, 1);
+  transition: border 250ms cubic-bezier(0.16, 1, 0.3, 1), box-shadow 250ms ease;
   border-radius: var(--brand-borderRadius-medium);
+  box-shadow: 0 0 0 2px transparent;
 }
 
 .SubdomainNavBar-search-button svg,
@@ -394,6 +395,11 @@
     border: var(--brand-borderWidth-normal) solid var(--brand-SubdomainNavBar-border-button-hover);
   }
 
+  .SubdomainNavBar-search-button:active,
+  .SubdomainNavBar-menu-button:active {
+    box-shadow: 0 0 0 1px var(--brand-SubdomainNavBar-border-button-hover);
+  }
+
   .SubdomainNavBar-mobile-menu-button {
     display: none;
   }
@@ -425,18 +431,24 @@
     display: none;
   }
 
-  /* TODO Get CTA buttons in the menu */
-  /* .SubdomainNavBar-button-area--visible {
+  .SubdomainNavBar-button-area--visible {
     display: flex;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    bottom: 0;
+    position: absolute;
     left: 0;
-    right: 0;
-    z-index: 222;
-    align-items: flex-end;
-  } */
+    z-index: 99;
+    width: 100%;
+    bottom: calc(calc(-100vh - 75px) - -150px);
+    height: auto;
+    animation-name: fade-in-down-staggered;
+    animation-duration: 500ms;
+    animation-delay: calc(10 * 80ms);
+    animation-fill-mode: both;
+    animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+  }
+
+  .SubdomainNavBar-inner-container--search-open .SubdomainNavBar-button-area--visible {
+    display: none;
+  }
 
   .SubdomainNavBar-button-area-inner {
     width: 100%;
@@ -451,8 +463,10 @@
   white-space: nowrap;
 }
 
-.SubdomainNavBar-cta-button--secondary {
-  display: none;
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .SubdomainNavBar-cta-button--secondary {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -544,7 +558,7 @@
 .SubdomainNavBar-search-results {
   overflow-y: scroll;
   list-style: none;
-  padding: 0;
+  padding: 0 var(--base-size-24) 0 0;
   margin: 0;
   height: 90%;
 }
