--- a/src/SubdomainNavBar/SubdomainNavBar.module.css
+++ b/src/SubdomainNavBar/SubdomainNavBar.module.css
@@ -57,7 +57,7 @@
   gap: 16px;
   padding: 0;
   margin: 0;
-  max-width: 230px;
+  max-width: 340px;
   color: var(--brand-color-text-default);
   padding: var(--base-size-16) 0;
 }
@@ -101,6 +101,7 @@
   color: var(--brand-color-text-default);
   text-decoration: none;
   padding-right: var(--base-size-16);
+  white-space: nowrap;
 }
 
 /*
@@ -158,7 +159,7 @@
 
 @media screen and (min-width: 1024px) {
   .SubdomainNavBar-primary-nav-list {
-    max-width: 250px;
+    max-width: 340px;
   }
 }
 
@@ -322,10 +323,15 @@
 /*
  * Toolbar actions area for search and mobile menu
  */
-.SubdomainNavBar-search-trigger {
+
+.SubdomainNavBar-secondary-nav {
   display: flex;
   align-items: center;
   margin-left: auto;
+}
+.SubdomainNavBar-search-trigger {
+  display: flex;
+  align-items: center;
 }
 
 .SubdomainNavBar-search-button,
