--- a/packages/react/src/Button/Button.module.css
+++ b/packages/react/src/Button/Button.module.css
@@ -50,6 +50,15 @@
   box-shadow: inset 0 0 0 2px var(--brand-color-neutral-emphasisPlus);
 }
 
+.Button--subtle {
+  color: var(--brand-color-text-default);
+  transition: box-shadow 200ms;
+}
+
+.Button--subtle:hover {
+  box-shadow: inset 0 0 0 2px var(--brand-color-neutral-emphasisPlus);
+}
+
 .Button--size-medium {
   padding: var(--base-size-16) var(--base-size-24);
 }
