updated component - simplified button reduction - removed Stack in favor of custom CSS

--- a/packages/react/src/ButtonGroup/ButtonGroup.module.css
+++ b/packages/react/src/ButtonGroup/ButtonGroup.module.css
@@ -1,3 +1,8 @@
 .ButtonGroup {
-  display: inline-block;
+  display: inline-grid;
+  gap: 8px;
+}
+
+.ButtonGroup--horizontal {
+  grid-template-columns: auto auto;
 }
