--- a/packages/react/src/ComparisonTable/ComparisonTable.module.css
+++ b/packages/react/src/ComparisonTable/ComparisonTable.module.css
@@ -67,7 +67,8 @@
   }
 
   .ComparisonTable-cell {
-    padding-bottom: var(--base-size-32);
+    margin-bottom: var(--base-size-32);
+    padding-bottom: 0;
   }
 
   .ComparisonTable thead tr {
@@ -78,14 +79,15 @@
     border-top: var(--brand-borderWidth-thin) solid var(--brand-color-border-default);
   }
 
-  .ComparisonTable tbody .ComparisonTable-cell-heading {
-    margin-top: var(--base-size-16);
-    font-weight: var(--brand-text-weight-600);
+  .ComparisonTable-inline-cell-label {
+    font-weight: var(--brand-heading-weight-600);
     font-size: var(--brand-text-size-600);
-    line-height: var(--brand-text-lineHeight-600);
+    line-height: var(--brand-heading-lineHeight-600);
   }
 
-  .ComparisonTable-inline-cell-label {
+  .ComparisonTable tbody .ComparisonTable-cell-heading {
+    margin-top: var(--base-size-24);
+    margin-bottom: var(--base-size-16);
     font-weight: var(--brand-heading-weight-500);
     font-size: var(--brand-text-size-500);
     line-height: var(--brand-heading-lineHeight-500);
@@ -157,6 +159,39 @@
   z-index: 2;
 }
 
+/*
+ * Narrow viewport-only styles
+*/
+@media screen and (max-width: 34rem) {
+  :global(.ComparisonTable--default) {
+    margin-top: var(--base-size-8);
+  }
+
+  :global(.ComparisonTable--default) .ComparisonTable-cell:not(.ComparisonTable-cell-heading) {
+    position: relative;
+    padding-left: 25px;
+  }
+  :global(.ComparisonTable--default) .ComparisonTable-cell::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 5px;
+    background: var(--brand-color-border-default);
+  }
+  :global(.ComparisonTable--default) .ComparisonTable-cell--featured::before {
+    background: linear-gradient(
+      180deg,
+      var(--brand-ComparisonTable-featured-color-start),
+      var(--brand-ComparisonTable-featured-color-end)
+    );
+  }
+}
+
+/*
+ * Narrow landscape and above viewport styles
+*/
 @media screen and (min-width: 34rem) {
   :global(.ComparisonTable--default) thead .ComparisonTable-cell-heading {
     font-weight: var(--brand-heading-weight-500);
